Fetching cache from Github release (via Github actions) (#202)

--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -29,6 +29,14 @@ steps:
     env:
       PESY_CLONE_PATH: $(Build.SourcesDirectory)
       OCAMLRUNPARAM: 'b'
+  - task: PublishBuildArtifacts@1
+    displayName: 'Upload sources'
+    condition: eq(variables['Agent.OS'], 'Windows_NT')
+    inputs:
+        pathToPublish: './npm-cli/pesy-0.5.0-dev.23.tgz'
+        artifactName: 'pesy-npm-cli-source'
+        parallel: true
+        parallelCount: 8
   # - script: "esy release"
   #   displayName: "esy release"
   - script: "esy test"
