--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
     "@opam/ocamlfind": "*",
     "@opam/sexplib": "*",
     "@opam/yojson": "*",
-    "ocaml": "4.6.10 - 4.12"
+    "ocaml": "4.6.10 - 4.13"
   },
   "devDependencies": {
-    "refmterr": "^3.3.0",
     "ocaml": "4.10.2000",
+    "refmterr": "^3.3.0",
     "@opam/dune": "*",
     "@opam/bos": "0.2.0",
     "@reason-native/rely": "*",
     "@opam/odoc": "*",
     "@opam/merlin": "*",
-    "@opam/ocamlformat": "0.12",
-    "@opam/ocaml-lsp-server": "ocaml/ocaml-lsp:ocaml-lsp-server.opam"
+    "@opam/ocamlformat": "*",
+    "@opam/ocaml-lsp-server": "*"
   }
 }
