--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pesy/esy-pesy",
-  "version": "0.1.0-dev.14",
+  "version": "0.1.0-alpha.14",
   "description": "\"Esy Pesy\" - Your Esy Assistant.",
   "esy": {
     "buildsInSource": "_build",
