--- a/npm-cli/templates/ci/.ci/cross-release.yml
+++ b/npm-cli/templates/ci/.ci/cross-release.yml
@@ -6,17 +6,17 @@ steps:
 
   - template: release-platform-setup.yml
     parameters:
-      platform: "Linux"
+      artifactName: "DockerBuiltNPM" # If static linking isn't necessary, use 'Linux'
       folder: "platform-linux"
 
   - template: release-platform-setup.yml
     parameters:
-      platform: "macOS"
+      artifactName: "macOS"
       folder: "platform-darwin"
 
   - template: release-platform-setup.yml
     parameters:
-      platform: "Windows"
+      artifactName: "Windows"
       folder: "platform-windows-x64"
 
   - script: "node .ci/pipelines-release.js"
