--- a/npm-cli/templates/ci/.ci/release-platform-setup.yml
+++ b/npm-cli/templates/ci/.ci/release-platform-setup.yml
@@ -4,13 +4,13 @@ parameters:
 
 steps:
   - task: DownloadBuildArtifacts@0
-    displayName: "Download ${{ parameters.platform }} Artifacts"
+    displayName: "Download ${{ parameters.artifactName }} Artifacts"
     inputs:
-      artifactName: ${{ parameters.platform }}
+      artifactName: ${{ parameters.artifactName }}
       downloadPath: $(Build.StagingDirectory)
 
   - script: "mkdir _release/${{ parameters.folder }}"
     displayName: "Create _release/${{ parameters.folder }}"
 
-  - script: "cp -r $(Build.StagingDirectory)/${{ parameters.platform }}/ _release/${{ parameters.folder }}"
-    displayName: "cp ${{ parameters.platform }}"
+  - script: "cp -r $(Build.StagingDirectory)/${{ parameters.artifactName }}/ _release/${{ parameters.folder }}"
+    displayName: "cp ${{ parameters.artifactName }}"
