--- a/npm-cli/templates/ci/azure-pipelines-template.yml
+++ b/npm-cli/templates/ci/azure-pipelines-template.yml
@@ -35,49 +35,13 @@ jobs:
       platform: Windows
       vmImage: windows-2019
 
-  - job: Docker_Alpine_Build_Experimental
-    displayName: Docker Alpine Build (experimental)
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-      - checkout: self
-        submodules: true
-      - script: sudo apt install jq gzip
-        displayName: Install deps
-      - bash: |
-          ESY__PROJECT_NAME=$(jq -r .name package.json)
-          ESY__PROJECT_VERSION=$(jq -r .version package.json)
-          echo "##vso[task.setvariable variable=esy__project_name]$ESY__PROJECT_NAME"
-          echo "##vso[task.setvariable variable=esy__project_version]$ESY__PROJECT_VERSION"
-      - script: docker build . -f docker/DevImage.Dockerfile --network=host -t $(esy__project_name)-dev
-        displayName: "Build Docker (dev) image"
-      - script: docker container run -itd --network=host --name $(esy__project_name)-container $(esy__project_name)-dev
-        displayName: "Run Docker container"
-      - script:  docker cp $(esy__project_name)-container:/app/_release $PWD/_container_release
-        displayName: "Copy _release from container"
-      - script: npm pack
-        workingDirectory: _container_release
-        displayName: "Npm pack'ing"
-      - task: PublishBuildArtifacts@1
-        displayName: "Publish Docker built artifact"
-        inputs:
-          PathtoPublish: "_container_release/$(esy__project_name)-$(esy__project_version).tgz"
-          ArtifactName: DockerBuiltNPM.tgz
-      - script: docker build . -f docker/ProdImage.Dockerfile --network=host -t $(esy__project_name)
-        displayName: "Build production Docker image"
-      - script: docker save $(esy__project_name) | gzip > $(esy__project_name)-docker-image.tar.gz
-        displayName: "Save Docker image as tarball"
-      - task: PublishBuildArtifacts@1
-        displayName: "Publish Docker production image"
-        inputs:
-          PathtoPublish: "$(esy__project_name)-docker-image.tar.gz"
-          ArtifactName: DockerBuiltNPM.tgz
+  - template: .ci/build-docker.yml
           
   # This job is kept here as we want to have the platform names in the same file
   - job: Release
     displayName: Release
     dependsOn:
-      - Linux
+      - Docker_Alpine_Build
       - macOS
       - Windows
     pool:
