--- a/.ci/utils/use-esy.yml
+++ b/.ci/utils/use-esy.yml
@@ -1,9 +1,9 @@
-# steps to install esy globally
+# steps to install @esy-nightly/esy globally
 
 steps:
-  - script: "sudo npm install --prefix /usr/local --unsafe-perm -g esy"
-    displayName: "install esy"
+  - script: "sudo npm install --prefix /usr/local --unsafe-perm -g @esy-nightly/esy"
+    displayName: "install @esy-nightly/esy"
     condition: ne(variables['Agent.OS'], 'Windows_NT')
-  - script: "npm install -g esy"
-    displayName: "install esy"
+  - script: "npm install -g @esy-nightly/esy"
+    displayName: "install @esy-nightly/esy"
     condition: eq(variables['Agent.OS'], 'Windows_NT')
